<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.bardframework</groupId>
        <artifactId>bard-parent</artifactId>
        <version>2</version>
        <relativePath/>
    </parent>

    <groupId>org.bardframework.commons</groupId>
    <artifactId>bard-commons</artifactId>
    <version>0.3.1</version>

    <packaging>pom</packaging>

    <modules>
        <module>common-captcha</module>
        <module>common-config</module>
        <module>common-jackson</module>
        <module>common-monitoring</module>
        <module>common-qr</module>
        <module>common-redis</module>
        <module>common-reflection</module>
        <module>common-security</module>
        <module>common-security-redis</module>
        <module>common-sms</module>
        <module>common-spring-boot</module>
        <module>common-swagger</module>
        <module>common-utils</module>
        <module>common-utils-persian</module>
        <module>common-waf</module>
        <module>common-web</module>
    </modules>

    <properties>
        <bardframework.version>0.3.1</bardframework.version>
        <google.zxing.version>3.4.0</google.zxing.version>
        <guava.version>29.0-jre</guava.version>
        <mapstruct.version>1.3.1.Final</mapstruct.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <reflection.version>0.9.12</reflection.version>
        <springfox-swagger.version>2.9.2</springfox-swagger.version>
        <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-reflection</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-utils-persian</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-jackson</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bardframework.commons</groupId>
                <artifactId>common-web</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
